<resources>
    <string name="app_name">MyBook</string>
    <string name="search_book">Search book</string>
    <string name="default_null"> - </string>
    <string name="about_book">About this book</string>
    <string name="publish_date">Publish Date</string>
    <string name="pages">Pages</string>
    <string name="book">Book</string>
    <string name="cover">cover</string>
    <string name="back">back</string>
    <string name="retry">Retry</string>
    <string name="offline">You are offline</string>
    <string name="book_sore">Book Store</string>
    <string name="search">search</string>
    <string name="about_store">Dapatkan buku - buku pilihan terbaik disini dengan berbagai macam pilihan</string>
    <string name="buku_terbaru">Buku Terbaru</string>
    <string name="buku_best">Buku Best Seller</string>
    <string name="buku_trending">Buku Trending Saat Ini</string>
</resources>
