<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.home.ui.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_sore"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>
        <ImageButton
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_search"
            android:tint="@color/white"
            android:background="@drawable/search_background_cr"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/search" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:cardCornerRadius="5dp"
            android:backgroundTint="@color/skyBlue"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/imageCard"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_book_cover"
                    app:layout_constraintTop_toTopOf="@id/cardConstraint"
                    app:layout_constraintStart_toStartOf="@id/cardConstraint"
                    android:contentDescription="@string/cover" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/about_store"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="@id/cardConstraint"
                    app:layout_constraintStart_toEndOf="@id/imageCard"
                    app:layout_constraintEnd_toEndOf="@id/cardConstraint"
                    app:layout_constraintBottom_toBottomOf="@id/cardConstraint"
                    android:layout_marginStart="10dp"
                    android:lineSpacingExtra="2dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardOffline"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardOfflineConst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/imageOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cloud_off"
                    android:tint="@color/blue"
                    app:layout_constraintTop_toTopOf="@id/cardOfflineConst"
                    app:layout_constraintStart_toStartOf="@id/cardOfflineConst"
                    app:layout_constraintEnd_toEndOf="@id/cardOfflineConst"
                    android:contentDescription="@string/cover" />
                <TextView
                    android:id="@+id/labelOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offline"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black2"
                    app:layout_constraintTop_toBottomOf="@id/imageOffline"
                    app:layout_constraintStart_toStartOf="@id/cardOfflineConst"
                    app:layout_constraintEnd_toEndOf="@id/cardOfflineConst"/>
                <Button
                    android:id="@+id/buttonRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/retry"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white"
                    android:background="@drawable/retry_background"
                    app:layout_constraintTop_toBottomOf="@id/labelOffline"
                    app:layout_constraintStart_toStartOf="@id/cardOfflineConst"
                    app:layout_constraintEnd_toEndOf="@id/cardOfflineConst"
                    android:layout_marginTop="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/labelBestSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buku_best"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/cardOffline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layoutBestSeller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelBestSeller"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/labelTrending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buku_trending"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/layoutBestSeller"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layoutTrending"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelTrending"
            android:layout_marginTop="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>