<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.home.ui.DetailItemFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/ic_default_image"
            app:layout_constraintDimensionRatio="w, 1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/cover" />
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="?attr/actionModeCloseDrawable"
            android:tint="@color/white"
            android:background="@drawable/back_background"
            app:layout_constraintTop_toTopOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_null"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressTint="@color/orange"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_null"
            android:textSize="13sp"
            android:textColor="@color/black2"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_null"
            android:textSize="15sp"
            android:textColor="@color/black2"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@id/authors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBook"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:elevation="0.5dp"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@id/publisher"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/printType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book"
                android:textColor="@color/skyBlue"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintBottom_toBottomOf="@id/layoutBook"
                app:layout_constraintStart_toStartOf="@id/layoutBook"
                app:layout_constraintEnd_toEndOf="@id/layoutBook"
                android:layout_marginBottom="5dp"/>
            <ImageView
                android:id="@+id/imageBook"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_book"
                android:tint="@color/blue"
                app:layout_constraintBottom_toTopOf="@id/printType"
                app:layout_constraintStart_toStartOf="@id/layoutBook"
                app:layout_constraintEnd_toEndOf="@id/layoutBook"
                android:contentDescription="@string/book" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPages"
            android:visibility="gone"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:elevation="0.5dp"
            android:background="@drawable/box_background"
            app:layout_constraintTop_toBottomOf="@id/publisher"
            app:layout_constraintStart_toEndOf="@id/layoutBook"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/labelPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pages"
                android:textColor="@color/skyBlue"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintStart_toStartOf="@id/layoutPages"
                app:layout_constraintEnd_toEndOf="@id/layoutPages"
                app:layout_constraintBottom_toBottomOf="@id/layoutPages"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="@id/layoutPages"
                app:layout_constraintEnd_toEndOf="@id/layoutPages"
                app:layout_constraintBottom_toTopOf="@id/labelPage"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPublish"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:elevation="0.5dp"
        android:background="@drawable/box_background"
        app:layout_constraintTop_toBottomOf="@id/publisher"
        app:layout_constraintStart_toEndOf="@id/layoutPages"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:id="@+id/labelPublishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_date"
            android:textColor="@color/skyBlue"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="@id/layoutPublish"
            app:layout_constraintEnd_toEndOf="@id/layoutPublish"
            app:layout_constraintBottom_toBottomOf="@id/layoutPublish"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/publishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="@id/layoutPublish"
            app:layout_constraintEnd_toEndOf="@id/layoutPublish"
            app:layout_constraintBottom_toTopOf="@id/labelPublishDate"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_book"
            android:textSize="18sp"
            android:textColor="@color/black2"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@id/layoutBook"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_null"
            android:textSize="14sp"
            android:textColor="@color/grey2"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="2dp"
            app:layout_constraintTop_toBottomOf="@id/labelDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>